--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             <div class="row-lg-12 row-sm-12">
                 <div class="col-lg-12 col">
                     <div id="content">
-                    <h1>COVIDO</h1>
+                    <h1>GIVE LIFE</h1>
                     <h4>Donate for the greater good</h4>
                     <hr>
-                    <a href="https://rzp.io/l/gGS8kMTa8">
+                    <a href="https://rzp.io/l/EcP0pHKHFv">
                         <button class="btn btn-success btn-lg"><img class="logo" src="heart.png" alt=""> DONATE </button>
                     </a>
                 </div>
