--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h4>Donate for the greater good</h4>
                     <hr>
                     <a href="https://rzp.io/l/EcP0pHKHFv">
-                        <button class="btn btn-success btn-lg"><img class="logo" src="heart.png" alt=""> DONATE </button>
+                        <button class="btn btn-success btn-lg"> DONATE </button>
                     </a>
                 </div>
                 </div>
