--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
         
-        <title>Covido | Home</title>
+        <title>Give Life | Home</title>
 
     </head>
 
@@ -29,7 +29,7 @@
         
         <div class="conatainer clear-fix">
             <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-sm py-0">
-                <a href="index.html" class="navbar-brand mx-2 float-left">COVIDO</a>
+                <a href="index.html" class="navbar-brand mx-2 float-left">Give Life</a>
                 <button class="navbar-toggler float-right" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon navbar-dark"></span>
                 </button>
